main/default/objects/Customer_Detail__c/Customer_Detail__c.object-meta.xml
<CustomObject>
    <description>Details for customer records</description>
    <label>Customer Detail</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>