main/default/objects/Customer_Detail__c/fields/Account_Business_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Party_ID__c</fullName>
    <formula>Parent_Account__r.Customer_Detail__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Party ID</label>
    <type>Text</type>
</CustomField>