main/default/objects/Customer_Detail__c/fields/Accounts_Receivable_System__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_System__c</fullName>
    <label>Accounts Receivable System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>IBIS</fullName>
            </value>
            <value>
                <fullName>ICMS</fullName>
            </value>
            <value>
                <fullName>RevChain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>