main/default/objects/Customer_Detail__c/fields/Acquired_Company_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company_Account_ID__c</fullName>
    <label>Acquired Company Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>