main/default/objects/Customer_Detail__c/fields/Acquired_Company_Biller__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company_Biller__c</fullName>
    <description>Acquired Company or Biller from legacy system or billing system moving forward</description>
    <inlineHelpText>Acquired Company or Biller from legacy system or billing system moving forward</inlineHelpText>
    <label>Acquired Company or Biller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>IBIS</fullName>
            </value>
            <value>
                <fullName>ICMS</fullName>
            </value>
            <value>
                <fullName>Optic Access</fullName>
            </value>
            <value>
                <fullName>ProTel</fullName>
            </value>
            <value>
                <fullName>WCI</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>