main/default/objects/Customer_Detail__c/fields/Bill_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Cycle</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Details</relationshipLabel>
    <relationshipName>Bill_Cycle_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>