main/default/objects/Customer_Detail__c/fields/Bill_Cycle_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle_External_ID__c</fullName>
    <label>Bill Cycle External ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>