main/default/objects/Customer_Detail__c/fields/Billing_Final_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Final_Country__c</fullName>
    <label>Billing Final Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>