main/default/objects/Customer_Detail__c/fields/Billing_Final_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Final_Postal_Code__c</fullName>
    <label>Billing Final Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>