main/default/objects/Customer_Detail__c/fields/Billing_Final_Room_Suite__c.field-meta.xml
<CustomField>
    <fullName>Billing_Final_Room_Suite__c</fullName>
    <label>Billing Final Room/Suite</label>
    <length>30</length>
    <type>Text</type>
</CustomField>