main/default/objects/Customer_Detail__c/fields/Billing_Main_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Main_City__c</fullName>
    <label>Billing Main City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>