main/default/objects/Customer_Detail__c/fields/Billing_Main_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Main_Country__c</fullName>
    <label>Billing Main Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>