main/default/objects/Customer_Detail__c/fields/Billing_Main_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Main_Name__c</fullName>
    <label>Billing Main Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>