main/default/objects/Customer_Detail__c/fields/Billing_Main_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_Main_State__c</fullName>
    <label>Billing Main State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>