main/default/objects/Customer_Detail__c/fields/Blended__c.field-meta.xml
<CustomField>
    <fullName>Blended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if business unit owner = blended</description>
    <inlineHelpText>This box is checked if business unit owner = blended</inlineHelpText>
    <label>Blended</label>
    <type>Checkbox</type>
</CustomField>