main/default/objects/Customer_Detail__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <description>Business Party ID</description>
    <inlineHelpText>Business Party ID</inlineHelpText>
    <label>BPID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>