main/default/objects/Customer_Detail__c/fields/Care_Organization__c.field-meta.xml
<CustomField>
    <fullName>Care_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Organization</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Details (Care Organization)</relationshipLabel>
    <relationshipName>Care_Organization_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>