main/default/objects/Customer_Detail__c/fields/Collection_Code__c.field-meta.xml
<CustomField>
    <fullName>Collection_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Code</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Details</relationshipLabel>
    <relationshipName>Collection_Code_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>