main/default/objects/Customer_Detail__c/fields/Collection_Rep__c.field-meta.xml
<CustomField>
    <fullName>Collection_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Rep_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>