main/default/objects/Customer_Detail__c/fields/Credit_Bureau__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bureau__c</fullName>
    <label>Credit Bureau</label>
    <length>36</length>
    <type>Text</type>
</CustomField>