main/default/objects/Customer_Detail__c/fields/Credit_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Date__c</fullName>
    <label>Credit Score Date</label>
    <type>DateTime</type>
</CustomField>