main/default/objects/Customer_Detail__c/fields/Customer_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>