main/default/objects/Customer_Detail__c/fields/CustSettings_Copied_From_Parent__c.field-meta.xml
<CustomField>
    <fullName>CustSettings_Copied_From_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to indicate whether Parents Subscriber settings and Tax Information flowed to a child</description>
    <label>CustSettings Copied From Parent</label>
    <type>Checkbox</type>
</CustomField>