main/default/objects/Customer_Detail__c/fields/Data_Sovereignty_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Data_Sovereignty_Requirements__c</fullName>
    <description>Lets the user know if data on that account can be cross the border</description>
    <inlineHelpText>Should this customer’s data be restricted? Yes – Canada means data cannot leave Canada , Yes – US means the data cannot leave the US and No means there are no Data restrictions for this customer and data can cross borders</inlineHelpText>
    <label>Data Sovereignty Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Canada</fullName>
            </value>
            <value>
                <fullName>Yes - US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>