main/default/objects/Customer_Detail__c/fields/Days_in_AID__c.field-meta.xml
<CustomField>
    <fullName>Days_in_AID__c</fullName>
    <formula>TODAY() - Date_in_AID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since put into AID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>