main/default/objects/Customer_Detail__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>This is driven from the DUNS number in the legacy system</description>
    <inlineHelpText>This is driven from the DUNS number in the legacy system</inlineHelpText>
    <label>DUNS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>