main/default/objects/Customer_Detail__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Details</relationshipLabel>
    <relationshipName>Exchange_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>