main/default/objects/Customer_Detail__c/fields/Government_Segment__c.field-meta.xml
<CustomField>
    <fullName>Government_Segment__c</fullName>
    <label>Government Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Province</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>