main/default/objects/Customer_Detail__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <inlineHelpText>Customer Account Number from legacy billing system</inlineHelpText>
    <label>Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>