main/default/objects/Customer_Detail__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal name of the business for contracts, etc.</description>
    <inlineHelpText>Legal name of the business for contracts, etc.</inlineHelpText>
    <label>Legal Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>