main/default/objects/Customer_Detail__c/fields/LOA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Effective_Date__c</fullName>
    <label>LOA Effective Date</label>
    <type>Date</type>
</CustomField>