main/default/objects/Customer_Detail__c/fields/LOA_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>LOA_Signed_By__c</fullName>
    <label>LOA Signed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>