main/default/objects/Customer_Detail__c/fields/Logo_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Logo_Restriction__c</fullName>
    <inlineHelpText>Determines if the customer logo is restricted to use for presentations internally or externally</inlineHelpText>
    <label>Logo Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - logo not restricted</fullName>
                <default>true</default>
                <label>No - logo not restricted</label>
            </value>
            <value>
                <fullName>Yes - logo restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>