main/default/objects/Customer_Detail__c/fields/MSS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>MSS_Account_ID__c</fullName>
    <label>MSS Account ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>