main/default/objects/Customer_Detail__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <description>To leverage account security on this object, we set the parent account of this object to the root of the hierarchy associated with it OR a system account if it is detached.</description>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Customer Details</relationshipLabel>
    <relationshipName>Child_Customer_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>