main/default/objects/Customer_Detail__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the the record is past due.</description>
    <inlineHelpText>Identifies if the the record is past due.</inlineHelpText>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>