main/default/objects/Customer_Detail__c/fields/payment_term_date__c.field-meta.xml
<CustomField>
    <fullName>payment_term_date__c</fullName>
    <label>Payment Term Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Date</fullName>
                <default>true</default>
                <label>Invoice Date</label>
            </value>
            <value>
                <fullName>Invoice Receipt Date</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>