main/default/objects/Customer_Detail__c/fields/Prov_Market_Area__c.field-meta.xml
<CustomField>
    <fullName>Prov_Market_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provisioning Market Area</label>
    <referenceTo>Market_Area__c</referenceTo>
    <relationshipLabel>Customer Details (Provisional Market Area)</relationshipLabel>
    <relationshipName>Provisional_Customer_Details</relationshipName>
    <type>Lookup</type>
</CustomField>