main/default/objects/Customer_Detail__c/fields/Reporting_Company__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Company</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Details (Reporting Company)</relationshipLabel>
    <relationshipName>Reporting_Company_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>