main/default/objects/Customer_Detail__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscriber Address &#39;Service Address&#39;</description>
    <label>Service Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Customer Details (Service Address)</relationshipLabel>
    <relationshipName>Service_Address_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>