main/default/objects/Customer_Detail__c/fields/Split_Owner__c.field-meta.xml
<CustomField>
    <fullName>Split_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Split_Owned_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>