main/default/objects/Customer_Detail__c/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the the record is suspended.</description>
    <inlineHelpText>Identifies if the the record is suspended.</inlineHelpText>
    <label>Suspended</label>
    <type>Checkbox</type>
</CustomField>