main/default/objects/Customer_Detail__c/fields/Tax_Main_Address__c.field-meta.xml
<CustomField>
    <fullName>Tax_Main_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscriber Address &#39;Tax Main&#39;</description>
    <label>Tax Main Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Customer Details (Tax Main Address)</relationshipLabel>
    <relationshipName>Tax_Main_Address_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>