main/default/objects/Customer_Detail__c/validationRules/InvalidOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidOwner</fullName>
    <active>false</active>
    <description>Invalid Customer Detail owner or CAM assigned. Owners and CAMs must be active in ICC.</description>
    <errorConditionFormula>(((ISNEW() || ISCHANGED(Owner__c)) &amp;&amp; (Owner__r.Active_In_ICC__c = false || Owner__r.IsActive = false))
	|| ((ISNEW() || ISCHANGED(Split_Owner__c)) &amp;&amp; NOT(ISNULL(Split_Owner__c)) &amp;&amp; (Split_Owner__r.Active_In_ICC__c = false || Split_Owner__r.IsActive = false))
	|| ((ISNEW() || ISCHANGED(Customer_Account_Manager__c)) &amp;&amp; NOT(ISNULL(Customer_Account_Manager__c)) &amp;&amp; (Customer_Account_Manager__r.Active_In_ICC__c = false || Customer_Account_Manager__r.IsActive = false)))
&amp;&amp; $Profile.Name != &#39;System Administrator&#39;</errorConditionFormula>
    <errorMessage>Invalid Customer Detail owner or CAM assigned. Owners and CAMs must be active in ICC.</errorMessage>
</ValidationRule>