main/default/objects/Customer_Detail__c/validationRules/SubscriberIdMustBeNumericOrBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>SubscriberIdMustBeNumericOrBlank</fullName>
    <active>true</active>
    <description>Subscriber Id&#39;s Must Be Numeric</description>
    <errorConditionFormula>NOT(ISNUMBER(ICC_Subscriber_ID__c) || LEN(ICC_Subscriber_ID__c) = 0)</errorConditionFormula>
    <errorMessage>ICC Subscriber ID&#39;s Must Be A Numeric Value</errorMessage>
</ValidationRule>