main/default/objects/Customer_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Suspended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>